<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rng.sam.randomnumbergenerator.WordListActivity"
    tools:showIn="@layout/activity_word_list">

    <TextView android:id="@+id/word_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/word_list_title"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"/>

    <TextView android:id="@+id/word_list_explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/word_list_explanation"
        android:textSize="13sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_margin="8dp"
        android:background="#c0c0c0" />

    <EditText android:id="@+id/word_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:hint="@string/word_list_hint"
        android:inputType="textAutoCorrect|textAutoComplete|textMultiLine|textCapSentences"
        android:gravity="start"
        android:textSize="15sp" />

    <Button android:id="@+id/clear_words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/clear"
        android:textStyle="bold" />
</LinearLayout>